--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "AgilePoker",
   "short_name": "AgilePoker",
-  "theme_color": "#2a0044",
-  "background_color": "#2a0044",
+  "theme_color": " #4a74f9",
+  "background_color": " #4a74f9",
   "display": "standalone",
   "start_url": "/",
   "icons": [
