--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "AgilePoker",
-  "short_name": "AgilePoker",
+  "name": "FreighTech Poker",
+  "short_name": "FT Poker",
   "theme_color": " #4a74f9",
   "background_color": " #4a74f9",
   "display": "standalone",
