--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,43 +7,23 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "images/icon-72x72.png",
-      "sizes": "72x72",
+      "src": "images/tile70x70.png",
+      "sizes": "70x70",
       "type": "image/png"
     },
     {
-      "src": "images/icon-96x96.png",
-      "sizes": "96x96",
+      "src": "images/tile150x150.png",
+      "sizes": "150x150",
       "type": "image/png"
     },
     {
-      "src": "images/icon-128x128.png",
-      "sizes": "128x128",
+      "src": "images/tile310x150.png",
+      "sizes": "310x150",
       "type": "image/png"
     },
     {
-      "src": "images/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "images/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png"
-    },
-    {
-      "src": "images/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "images/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    },
-    {
-      "src": "images/icon-512x512.png",
-      "sizes": "512x512",
+      "src": "images/tile310x310.png",
+      "sizes": "310x310",
       "type": "image/png"
     }
   ],
